Added Leaflet as dependency.

--- a/templates/map.jade
+++ b/templates/map.jade
@@ -1,4 +1,6 @@
 extends base
 
 block body
-    p this is the map page
+    .row
+        .columns.large-4 Four Columns
+        .columns.large-8 Eight Columns
