--- a/templates/map.jade
+++ b/templates/map.jade
@@ -2,5 +2,5 @@ extends base
 
 block body
     .row
-        .columns.large-4 Four Columnzah
+        .columns.large-4 Four Columns
         .columns.large-8 Eight Columns
