--- a/src/scss/_foundation-settings.scss
+++ b/src/scss/_foundation-settings.scss
@@ -137,7 +137,7 @@ $default-float: left;
 // Grid Variables
 //
 
-// $row-width: emCalc(1000);
+$row-width: 100%;
 // $column-gutter: emCalc(30);
 // $total-columns: 12;
 
