--- a/templates/base.jade
+++ b/templates/base.jade
@@ -10,7 +10,9 @@ html
             link(rel="stylesheet", href="dist/main.css")
         else
             link(rel="stylesheet", href="dist/main.min.css")
-
+        
+        script(src="/js/main.js")
+        
         block head
 
     body
