--- a/templates/base.jade
+++ b/templates/base.jade
@@ -23,9 +23,13 @@ html
         block body
 
         if dev
+            script(src="/bower_components/leaflet/dist/leaflet-src.js")
+            script(src="/bower_components/jquery/jquery.js")
             each script in devScripts
                 script(src="/#{script}")
             script(src="http://localhost:35729/livereload.js")
         else
+            script(src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js")
+            script(src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js")
             script(src="/dist/js-built.min.js")
         block bottomscripts
