--- a/templates/base.jade
+++ b/templates/base.jade
@@ -7,9 +7,9 @@ html
 
         if dev
             link(rel="stylesheet", href="bower_components/leaflet/dist/leaflet.css")
-            link(rel="stylesheet", href="dist/main.css")
+            link(rel="stylesheet", href="/dist/main.css")
         else
-            link(rel="stylesheet", href="dist/main.min.css")
+            link(rel="stylesheet", href="/dist/main.min.css")
 
         script(src="/js/main.js")
 
