--- a/templates/includes/header.jade
+++ b/templates/includes/header.jade
@@ -1,1 +1,15 @@
-header.site-header HEADER
+header.site-header
+
+  a(href="/").site-logo Tucson Trailguide
+
+  nav
+    ul.nav
+      li
+        a(href="").nav--i About
+      li
+        a(href="/map").nav--i Map
+      li
+        a(href="").nav--i Search
+      li
+        a(href="").nav--i Sign-in
+
