--- a/src/scss/_foundation-settings.scss
+++ b/src/scss/_foundation-settings.scss
@@ -1277,13 +1277,13 @@ $row-width: 100%;
 
 // Top menu icon styles
 
-// $topbar-menu-link-transform: uppercase;
-// $topbar-menu-link-font-size: emCalc(13);
-// $topbar-menu-link-weight: bold;
-// $topbar-menu-link-color: #fff;
-// $topbar-menu-icon-color: #fff;
-// $topbar-menu-link-color-toggled: #888;
-// $topbar-menu-icon-color-toggled: #888;
+// $topbar-menscut-link-transform: uppercase;
+// $topbar-menscut-link-font-size: emCalc(13);
+// $topbar-menscut-link-weight: bold;
+// $topbar-menscut-link-color: #fff;
+// $topbar-menscut-icon-color: #fff;
+// $topbar-menscut-link-color-toggled: #888;
+// $topbar-menscut-icon-color-toggled: #888;
 
 // Transitions and breakpoint styles
 
