--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -6,7 +6,7 @@
 
   img {
     display: block;
-    @include u-absolute(0 n n 0);
+    @include scut-absolute(0 n n 0);
     width: 100%;
     height: 100%;
   }
@@ -25,7 +25,7 @@
 }
 
 .info-map {
-  @include u-absolute(0 n n 0);
+  @include scut-absolute(0 n n 0);
   height: 100%;
   width: 100%;
 }
@@ -34,7 +34,7 @@
 // DETAILS
 
 .details {
-  @extend %u-list-unstyled;
+  @extend %scut-list-unstyled;
   li {
     //border-top: 1px solid black;
     &:nth-child(odd) {
