--- a/src/scss/_map.scss
+++ b/src/scss/_map.scss
@@ -1,14 +1,14 @@
 $map-sidebar-x: 30%;
 
 .map-wrapper {
-  @include u-absolute($header-y 0 0 0);
+  @include scut-absolute($header-y 0 0 0);
 }
 
 .map-sidebar {
-  @include u-absolute(0 n 0 0);
+  @include scut-absolute(0 n 0 0);
   width: $map-sidebar-x;
 }
 
 .map {
-  @include u-absolute(0 0 0 $map-sidebar-x);
+  @include scut-absolute(0 0 0 $map-sidebar-x);
 }
