--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,8 @@
 @import "../../bower_components/foundation/scss/foundation/components/forms"; */
 
 // My SCSS utils
-@import "scss-utils/src/all";
+@import "scut/src/scut-reset";
+@import "scut/src/all";
 
 // Universals
 @import "variables";
