--- a/templates/info/segments.jade
+++ b/templates/info/segments.jade
@@ -1,12 +1,4 @@
 extends base
 
-block more
-    h2 Calculated data
-
-    table
-        tr
-            td Distance
-            td#distance-val
-        tr
-            td Cumulative Elevation Gain
-            td#elevation-val
+block bottomscripts
+  script(src="/src/js/pages/segment.js")
