--- a/templates/info/segments.jade
+++ b/templates/info/segments.jade
@@ -1,4 +1,5 @@
 extends base
 
 block bottomscripts
+  script!= "trailguide.pages.segmentId = '" + _id + "';"
   script(src="/src/js/pages/segment.js")
